--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Silka';
+    font-family: 'Silka' !important;
     src: url('../fonts/silka-regular-webfont.ttf');
 }
 
@@ -34,6 +34,9 @@ p {
     margin: 0;
 }
 
+
+/* Active Customers */
+
 .sidebar .nav-item .nav-link {
     display: block;
     text-align: left;
@@ -49,17 +52,71 @@ div.nav-link {
     margin-left: 27px !important;
 }
 
+#content-wrapper .topbar {
+    height: 55px !important;
+}
+
+.sidebar #sidebarToggle {
+    width: 2.5rem;
+    height: 2.5rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    background-color: #ffffff;
+    position: absolute;
+    top: 56%;
+    left: 2%;
+}
+
+.sidebar #sidebarToggle:hover {
+    background-color: #efefef;
+}
+
 .navbar h2 {
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
-    line-height: 17px;
-    /* identical to box height */
-    color: #4D4D4D;
+    color: #2D2D2D;
+    margin-top: 6px;
 }
 
+.tooltip-textarea {
+    position: relative;
+    display: inline-block;
+}
 
-/* Active Customers */
+.tooltip-textarea .tooltiptext {
+    visibility: hidden;
+    width: 75px;
+    background: #286EDD;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 2.8px;
+    color: #fff;
+    text-align: center;
+    padding: 5px 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -40px;
+    font-weight: 600;
+    font-size: 10px;
+}
+
+.tooltip-textarea .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #286EDD transparent transparent transparent;
+}
+
+.tooltip-textarea:hover .tooltiptext {
+    visibility: visible;
+}
 
 .live-chat-active-customers {
     border-right: solid#F8F9FC 2px;
@@ -70,7 +127,7 @@ div.nav-link {
 .live-chat-active-customers h4 {
     color: #4D4D4D;
     font-size: 13px;
-    padding: 23.5px 20px;
+    padding: 18.5px 28px;
     border-bottom: 1.5px solid var(--border-color-primary);
 }
 
@@ -88,7 +145,7 @@ div.nav-link {
     grid-template-rows: repeat(4, 20px);
     position: relative;
     width: 100%;
-    padding-left: 20px !important;
+    padding-left: 13px !important;
     border-bottom: 1px solid var(--border-color-primary);
     cursor: pointer;
 }
@@ -170,6 +227,7 @@ div.nav-link {
     margin-top: -28px;
     width: 100%;
     padding: 13px 10px;
+    height: 50px;
     border-bottom: 1.5px solid var(--border-color-primary);
     display: flex;
     justify-content: space-between;
@@ -180,7 +238,7 @@ div.nav-link {
     height: 32px;
     border-radius: 4px;
     border: none;
-    font-size: 11px;
+    font-size: 12px;
     font-weight: 400;
     text-decoration: none;
     display: flex;
@@ -189,18 +247,21 @@ div.nav-link {
 }
 
 .live-chat-transfer-chat {
-    margin-left: 3%;
+    margin-left: 10px;
     width: 120px;
+    margin-top: -4px;
     background-color: var(--color-secondary);
     color: var(--color-grey-4A);
     text-decoration: none !important;
 }
 
 .live-chat-resolve {
-    margin-right: 3%;
+    margin-right: 10px;
     width: 105px;
+    font-weight: bold;
     background-color: transparent;
     color: var(--color-primary);
+    margin-top: -4px;
     border-radius: 4px;
     text-decoration: none !important;
     border: 1px solid var(--color-primary);
@@ -250,8 +311,8 @@ div.nav-link {
 }
 
 .live-chat-message-wrapper {
-    font-size: 11px;
-    font-weight: 500;
+    font-size: 12px;
+    font-weight: 600;
     width: 100%;
     height: 60%;
     margin-top: 2%;
@@ -289,8 +350,8 @@ div.nav-link {
     grid-template-columns: 3fr minmax(min-content, 40px);
     grid-template-rows: 1fr 1fr;
     justify-items: end;
-    margin-left: 51%;
-    font-size: 11px;
+    margin-left: 53%;
+    font-size: 12px;
     margin-top: 5%;
 }
 
@@ -332,6 +393,7 @@ div.nav-link {
     align-items: center;
     color: var(--color-grey-4D);
     font-size: 9px;
+    margin: 5px 4px 0px 6px;
 }
 
 .live-chat-agent-message-time {
@@ -341,24 +403,24 @@ div.nav-link {
 }
 
 .live-chat-agent-message-time img {
-    margin: 0 5px;
+    margin: -5px 5px 0px 5px;
 }
 
 .live-chat-text-box-wrapper {
-    width: 95%;
+    width: 93%;
     border: 1px solid var(--border-color-primary);
     border-radius: 5px;
-    height: 20%;
+    height: 16%;
     display: grid;
-    grid-template-rows: 2fr 1fr;
     background-color: white;
     margin: 5px auto;
 }
 
 .live-chat-text-box {
     grid-row: 1 / 2;
-    padding: 5px;
+    padding: 14px 10px 10px 10px;
     width: 99%;
+    height: 40px;
     margin-left: 2px;
 }
 
@@ -368,6 +430,7 @@ div.nav-link {
     width: 100%;
     border: none;
     color: var(--color-grey-4D);
+    outline: none;
 }
 
 .live-chat-text-area::placeholder {
@@ -389,19 +452,18 @@ div.nav-link {
     align-self: start;
     justify-self: start;
     font-weight: 500;
-    padding-top: 5px;
+    padding-top: 10px;
     margin-left: 10px;
 }
 
 .live-chat-reply {
-    color: #757575;
-    padding: 5px;
+    color: var(--color-primary);
+    padding: 7px 10px 0px 10px;
     border-top: 2px solid var(--color-primary);
 }
 
 .live-chat-private {
-    color: var(--color-primary);
-    border-top: 2px solid var(--color-primary);
+    color: #757575;
 }
 
 .live-chat-text-format-icons {
@@ -425,7 +487,7 @@ div.nav-link {
 
 /* .live-chat-text-format-icon-wrapper:focus,
 .live-chat-text-format-icon-wrapper:active {
-background-color: #D6E5FD;
+  background-color: #D6E5FD;
 } */
 
 .live-chat-text-format-icon-wrapper.private-note,
@@ -570,7 +632,7 @@ background-color: #D6E5FD;
 
 .live-chat-customer-name {
     display: flex;
-    padding: 5% 0 4% 0;
+    padding: 6% 0 6% 0;
     justify-content: flex-start;
     align-items: center;
     padding-left: 25px;
@@ -807,8 +869,16 @@ background-color: #D6E5FD;
 
 /*     Setting Page css start*/
 
+#live-chat-setting-content-c {
+    display: none;
+}
+
+#live-chat-setting-content-cr {
+    display: none;
+}
+
 .live-chat-setting {
-    border-right: solid#F8F9FC 2px;
+    border-right: solid#E6E6E6 1px;
     background: #fff;
     padding: 0;
 }
@@ -831,6 +901,7 @@ background-color: #D6E5FD;
 
 .live-chat-setting-section .setting-item {
     padding-bottom: 25px;
+    cursor: pointer;
 }
 
 .live-chat-setting-section .setting-link {
@@ -845,8 +916,8 @@ background-color: #D6E5FD;
     color: #4D4D4D;
 }
 
-.live-chat-setting-functionalities .active-1 {
-    color: #0254D7 !important;
+.live-chat-setting-functionalities #profile-color-change {
+    color: #0254D7;
 }
 
 @media only screen and (max-width: 1140px) {
@@ -879,7 +950,15 @@ background-color: #D6E5FD;
     display: none;
 }
 
-.live-chat-setting-functionalities .icon-on-mobile {
+#profile-gray-icon {
+    display: none;
+}
+
+#calendar-blue-icon {
+    display: none;
+}
+
+#response-blue-icon {
     display: none;
 }
 
@@ -923,6 +1002,7 @@ background-color: #D6E5FD;
 .live-chat-profile-area .first-ele .image-upload-section {
     margin-top: -30px;
     margin-left: 65px;
+    cursor: pointer;
 }
 
 .live-chat-profile-area .first-ele .image-upload-section .file-upload {
@@ -1119,8 +1199,17 @@ background-color: #D6E5FD;
         display: inline-block;
         margin-top: -3px;
     }
-    .live-chat-setting-functionalities .icon-on-desktop {
+    #live-chat-setting-content-p {
         display: none;
+    }
+    #profile-gray-icon {
+        display: inline-block;
+    }
+    #profile-blue-icon {
+        display: none;
+    }
+    .live-chat-setting-functionalities #profile-color-change {
+        color: #4D4D4D;
     }
 }
 
@@ -1176,6 +1265,7 @@ background-color: #D6E5FD;
 .live-chat-setting-calender-heading .live-chat-calender-date select:hover {
     color: #0254D7;
     border: 1px solid #0254D7;
+    background-image: url(/img/select-down-arrow-color.svg);
 }
 
 .live-chat-setting-calender-heading span {
@@ -1191,7 +1281,6 @@ background-color: #D6E5FD;
 
 .live-chat-setting-calender-heading .live-chat-calender-date .search-container {
     float: right;
-    width: 200px;
     height: 34px;
     padding: 0px 0px 0px 15px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.08);
@@ -1204,7 +1293,6 @@ background-color: #D6E5FD;
     border: none;
     font-weight: 500;
     font-size: 14px;
-    font-family: Silka;
     color: #757575;
 }
 
@@ -1266,17 +1354,18 @@ background-color: #D6E5FD;
 
 .live-chat-calender-area p {
     font-size: 13px;
-    margin-top: 38px;
+    margin-top: 35px;
     color: #4D4D4D;
     width: 50%;
     display: inline-block;
     margin-left: 20px;
+    font-weight: 600;
 }
 
 .live-chat-calender-area .pagination-div {
     float: right;
     margin-top: 30px;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .live-chat-calender-area .pagination-div .pagination-content {
@@ -1291,7 +1380,8 @@ background-color: #D6E5FD;
 .live-chat-calender-area .pagination-content li {
     border-right: 1px solid #E6E6E6;
     box-sizing: border-box;
-    padding: 4px 15px 4px 15px;
+    padding: 4px 10px 1px 10px;
+    font-size: 13px;
 }
 
 .live-chat-calender-area .pagination-content li a {
@@ -1305,7 +1395,7 @@ background-color: #D6E5FD;
     border-radius: 6px 0px 0px 6px;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 767px) {
     .live-chat-calender-area table,
     .live-chat-calender-area thead,
     .live-chat-calender-area tbody,
@@ -1363,9 +1453,6 @@ background-color: #D6E5FD;
     .live-chat-calender-area td:nth-of-type(8):before {
         content: "Modified Date";
     }
-}
-
-@media screen and (max-width: 767px) {
     .live-chat-setting-calender-heading .live-chat-calender-date select {
         width: 75px;
         height: 35px;
@@ -1378,14 +1465,13 @@ background-color: #D6E5FD;
         width: 255px;
     }
     .live-chat-calender-area p {
-        font-size: 12px;
+        font-size: 10px;
         margin-left: -15px;
     }
     .live-chat-calender-area .pagination-div {
         margin-right: -15px;
     }
-    #live-chat-setting-content {
-        display: none;
+    #live-chat-setting-content-c {
         height: calc(100vh - 9.375rem) !important;
     }
     .live-chat-setting-calender-heading .back-arrow-div {
@@ -1439,7 +1525,6 @@ background-color: #D6E5FD;
 .live-chat-setting-canned-response-heading .live-chat-canned-response-popup .open-button {
     background: linear-gradient(90deg, #0254D7 0%, #0062FF 100%);
     border-radius: 5px;
-    font-family: Silka;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -1453,7 +1538,6 @@ background-color: #D6E5FD;
 .live-chat-setting-canned-response-heading .live-chat-canned-response-popup .delete-button {
     background: linear-gradient(90deg, #EE2525 0%, #FF4646 100%);
     border-radius: 5px;
-    font-family: Silka;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -1564,7 +1648,6 @@ background-color: #D6E5FD;
 
 .live-chat-setting-canned-response-heading .live-chat-canned-response-popup .search-container {
     float: right;
-    width: 200px;
     height: 34px;
     padding: 0px 0px 0px 15px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.08);
@@ -1577,7 +1660,6 @@ background-color: #D6E5FD;
     border: none;
     font-weight: 500;
     font-size: 14px;
-    font-family: Silka;
     color: #757575;
 }
 
@@ -1694,8 +1776,8 @@ background-color: #D6E5FD;
 }
 
 .live-chat-canned-response-area table .show-on-hover {
-    float: right;
-    margin-right: 22px;
+    text-align: right;
+    padding-right: 22px;
     cursor: pointer;
 }
 
@@ -1720,9 +1802,10 @@ background-color: #D6E5FD;
 
 .live-chat-canned-response-area p {
     font-size: 13px;
-    margin-top: 60px;
+    margin-top: 56px;
     color: #4D4D4D;
     width: 50%;
+    font-weight: 600;
     display: inline-block;
     margin-left: 20px;
 }
@@ -1730,7 +1813,7 @@ background-color: #D6E5FD;
 .live-chat-canned-response-area .pagination-div {
     float: right;
     margin-top: 52px;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .live-chat-canned-response-area .pagination-div .pagination-content {
@@ -1745,7 +1828,8 @@ background-color: #D6E5FD;
 .live-chat-canned-response-area .pagination-content li {
     border-right: 1px solid #E6E6E6;
     box-sizing: border-box;
-    padding: 4px 15px 4px 15px;
+    padding: 4px 10px 0px 10px;
+    font-size: 13px;
 }
 
 .live-chat-canned-response-area .pagination-content li a {
@@ -1771,7 +1855,7 @@ background-color: #D6E5FD;
         margin-left: 10px;
     }
     .live-chat-canned-response-area p {
-        font-size: 12px;
+        font-size: 10px;
         margin-left: -15px;
     }
     .live-chat-canned-response-area .pagination-div {
@@ -1779,9 +1863,6 @@ background-color: #D6E5FD;
         margin-top: 52px;
         margin-right: -15px;
     }
-}
-
-@media only screen and (max-width: 760px) {
     .live-chat-canned-response-area table,
     .live-chat-canned-response-area thead,
     .live-chat-canned-response-area tbody,
@@ -1805,7 +1886,7 @@ background-color: #D6E5FD;
         border: none;
         border-bottom: 1px solid #eee;
         position: relative;
-        padding: 5px 0px 5px 50% !important;
+        padding: 5px 0px 5px 60% !important;
     }
     .live-chat-canned-response-area td:before {
         position: absolute;
@@ -1828,7 +1909,7 @@ background-color: #D6E5FD;
         content: " ";
     }
     .live-chat-canned-response-area table .show-on-hover {
-        float: none;
+        text-align: unset;
         margin-right: 0px;
     }
     .live-chat-canned-response-area table .cam {
@@ -1848,6 +1929,9 @@ background-color: #D6E5FD;
     }
     .live-chat-response-setting .live-chat-setting-functionalities .manage {
         padding-left: 25px;
+    }
+    #live-chat-setting-content-cr {
+        height: calc(100vh - 9.375rem) !important;
     }
 }
 
@@ -1887,6 +1971,17 @@ background-color: #D6E5FD;
     background-position-x: 90%;
     background-position-y: 13px;
     outline: none;
+}
+
+#datepicker:hover,
+#datepickers:hover {
+    border: 1px solid #0254D7;
+    background-image: url(/img/select-down-arrow-color.svg);
+}
+
+#datepicker:hover::placeholder,
+#datepickers:hover::placeholder {
+    color: #0254D7;
 }
 
 .live-chat-setting-calender-heading .back-arrow-div {
@@ -1929,6 +2024,19 @@ background-color: #D6E5FD;
     outline: none;
 }
 
+.live-chat-setting-archived-heading .live-chat-archived-date select option {
+    color: #0254D7;
+    font-size: 13px;
+    padding: 10px;
+    margin-top: 8px;
+}
+
+.live-chat-setting-archived-heading .live-chat-archived-date select:hover {
+    color: #0254D7;
+    border: 1px solid #0254D7;
+    background-image: url(/img/select-down-arrow-color.svg);
+}
+
 .live-chat-setting-archived-heading span {
     padding-left: 5px;
     font-weight: 600;
@@ -1942,7 +2050,6 @@ background-color: #D6E5FD;
 
 .live-chat-setting-archived-heading .live-chat-archived-date .search-container {
     float: right;
-    width: 200px;
     height: 34px;
     padding: 0px 0px 0px 15px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.08);
@@ -1955,7 +2062,6 @@ background-color: #D6E5FD;
     border: none;
     font-weight: 500;
     font-size: 14px;
-    font-family: Silka;
     color: #757575;
 }
 
@@ -1996,10 +2102,16 @@ background-color: #D6E5FD;
     border-bottom: 1px solid #E6E6E6;
 }
 
+.live-chat-archived-chats-area table tr:hover {
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    background: #FFFFFF;
+}
+
 .live-chat-archived-chats-area table tr th {
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
+    padding-left: 50px;
     color: #757575;
 }
 
@@ -2007,6 +2119,7 @@ background-color: #D6E5FD;
     font-weight: 600;
     font-size: 12px;
     color: #4D4D4D;
+    padding-left: 50px;
 }
 
 .live-chat-archived-chats-area table tr:hover button {
@@ -2016,7 +2129,6 @@ background-color: #D6E5FD;
 .live-chat-archived-chats-area table tr td button {
     background: linear-gradient(90deg, #0254D7 0%, #0062FF 100%);
     border-radius: 5px;
-    font-family: Silka;
     font-style: normal;
     font-weight: 500;
     height: 34px;
@@ -2044,6 +2156,7 @@ background-color: #D6E5FD;
     margin-top: 60px;
     color: #4D4D4D;
     width: 50%;
+    font-weight: 600;
     padding-left: 10px;
     display: inline-block;
 }
@@ -2066,7 +2179,8 @@ background-color: #D6E5FD;
 .live-chat-archived-chats-area .pagination-content li {
     border-right: 1px solid #E6E6E6;
     box-sizing: border-box;
-    padding: 4px 15px 4px 15px;
+    padding: 4px 10px 0px 10px;
+    font-size: 13px;
 }
 
 .live-chat-archived-chats-area .pagination-content li a {
@@ -2160,6 +2274,9 @@ background-color: #D6E5FD;
     #datepickers {
         width: 100%;
         margin-bottom: 15px;
+    }
+    #live-chat-archived-setting {
+        height: calc(100vh - 8.375rem) !important;
     }
 }
 
@@ -2293,7 +2410,7 @@ background-color: #D6E5FD;
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
     .live-chat-active-customers {
         left: 0px;
         position: fixed;
@@ -2412,6 +2529,8 @@ background-color: #D6E5FD;
     }
     .live-chat-text-box {
         border: none;
+        padding: 15px 10px 10px 10px;
+        height: 55px;
     }
     .live-chat-text-area {
         font-size: 18px;
