--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,14 @@ p {
     margin: 0;
 }
 
+#without-collapse {
+    display: none;
+}
+
+.sidebar {
+    width: 11rem!important;
+}
+
 
 /* Active Customers */
 
