--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 @font-face {
-    font-family: 'Silka' !important;
-    src: url('../fonts/silka-regular-webfont.ttf');
+    font-family: 'DM Sans' !important;
+    src: url('../fonts/DMSans-Regular-webfont.ttf');
 }
+
+
+/* {
+    font-family: 'sans-serif' !important;
+} */
 
 
 /* Live Chat Styling Variables */
@@ -27,11 +32,19 @@ html {
 *::after {
     margin: 0px;
     padding: 0px;
-    /* font-family: 'Silka'; */
+    /* font-family: 'DM Sans' !important; */
 }
 
 p {
     margin: 0;
+}
+
+#without-collapse {
+    display: none;
+}
+
+.sidebar {
+    width: 11rem!important;
 }
 
 
@@ -157,8 +170,8 @@ div.nav-link {
 .live-chat-client-image,
 .live-chat-agent-image {
     grid-row: 2 / 4;
-    width: 30px;
-    height: 30px;
+    width: 34px;
+    height: 34px;
     background-color: var(--color-primary);
     color: white;
     border-radius: 50%;
@@ -173,16 +186,19 @@ div.nav-link {
     font-weight: 500;
     font-size: 13px;
     color: var(--color-grey-2D);
+    margin-left: -6px;
 }
 
 .live-chat-active-customer-text {
     grid-row: 3 / 4;
     font-size: 12px;
     color: var(--color-grey-90);
+    margin-left: -6px;
+    margin-top: -2px;
 }
 
 .live-chat-active-customer-text img {
-    margin-right: 5px;
+    margin-right: 0px;
 }
 
 .live-chat-time {
@@ -202,7 +218,8 @@ div.nav-link {
     width: 13px;
     height: 13px;
     color: white;
-    margin: 0 auto;
+    margin-left: 28px;
+    margin-top: -2px;
     position: relative;
     font-weight: 500;
     font-size: 10px;
@@ -288,6 +305,7 @@ div.nav-link {
     margin: 0 auto;
     text-align: center;
     margin-top: 5%;
+    display: none;
 }
 
 .live-chat-day::before {
@@ -314,8 +332,8 @@ div.nav-link {
     font-size: 12px;
     font-weight: 600;
     width: 100%;
-    height: 60%;
-    margin-top: 2%;
+    height: 70%;
+    margin-top: 2px;
     margin-bottom: 0;
     overflow-x: hidden;
     scrollbar-width: none;
@@ -413,7 +431,7 @@ div.nav-link {
     height: 16%;
     display: grid;
     background-color: white;
-    margin: 5px auto;
+    margin: 2px auto;
 }
 
 .live-chat-text-box {
@@ -546,7 +564,7 @@ div.nav-link {
     -webkit-appearance: none;
     -moz-appearance: none;
     background: transparent;
-    background-image: url("./img/drop-down-arrow.svg");
+    background-image: url("../img/drop-down-arrow.svg");
     background-repeat: no-repeat;
     background-position: 95% 50%;
     margin: 15px 15px;
@@ -635,12 +653,12 @@ div.nav-link {
     padding: 6% 0 6% 0;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 25px;
+    padding-left: 12px;
     border-bottom: 1px solid var(--border-color-primary);
 }
 
 .live-chat-customer-name p {
-    margin: 0 20px;
+    margin: 0 12px;
     color: var(--color-primary);
     font-weight: 500;
 }
@@ -659,7 +677,7 @@ div.nav-link {
 .live-chat-customer-contact-details,
 .live-chat-date-time,
 .live-chat-active-agent {
-    margin-left: 25px;
+    margin-left: 12px;
     width: 83%;
     font-size: 12px;
     font-weight: 400;
@@ -754,7 +772,7 @@ div.nav-link {
     -moz-appearance: none;
     background: transparent;
     appearance: none;
-    background-image: url(/img/select-down-arrow.svg);
+    background-image: url(../img/select-down-arrow.svg);
     background-repeat: no-repeat;
     background-position-x: 95%;
     background-position-y: 13px;
@@ -1069,7 +1087,7 @@ div.nav-link {
     margin-top: 16px;
     margin-bottom: 1px;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 15px;
     color: #4D4D4D;
 }
 
@@ -1255,7 +1273,7 @@ div.nav-link {
     -moz-appearance: none;
     background: transparent;
     appearance: none;
-    background-image: url(/img/select-down-arrow.svg);
+    background-image: url(../img/select-down-arrow.svg);
     background-repeat: no-repeat;
     background-position-x: 90%;
     background-position-y: 13px;
@@ -1265,7 +1283,7 @@ div.nav-link {
 .live-chat-setting-calender-heading .live-chat-calender-date select:hover {
     color: #0254D7;
     border: 1px solid #0254D7;
-    background-image: url(/img/select-down-arrow-color.svg);
+    background-image: url(../img/select-down-arrow-color.svg);
 }
 
 .live-chat-setting-calender-heading span {
@@ -1789,7 +1807,7 @@ div.nav-link {
     visibility: visible;
 }
 
-.live-chat-canned-response-area table tr:hover {
+.live-chat-canned-response-area table tbody tr:hover {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     background: #FFFFFF;
 }
@@ -1966,7 +1984,7 @@ div.nav-link {
     -moz-appearance: none;
     background: transparent;
     appearance: none;
-    background-image: url(/img/select-down-arrow.svg);
+    background-image: url(../img/select-down-arrow.svg);
     background-repeat: no-repeat;
     background-position-x: 90%;
     background-position-y: 13px;
@@ -1976,7 +1994,7 @@ div.nav-link {
 #datepicker:hover,
 #datepickers:hover {
     border: 1px solid #0254D7;
-    background-image: url(/img/select-down-arrow-color.svg);
+    background-image: url(../img/select-down-arrow-color.svg);
 }
 
 #datepicker:hover::placeholder,
@@ -2017,7 +2035,7 @@ div.nav-link {
     -moz-appearance: none;
     background: transparent;
     appearance: none;
-    background-image: url(/img/select-down-arrow.svg);
+    background-image: url(../img/select-down-arrow.svg);
     background-repeat: no-repeat;
     background-position-x: 90%;
     background-position-y: 13px;
@@ -2034,7 +2052,7 @@ div.nav-link {
 .live-chat-setting-archived-heading .live-chat-archived-date select:hover {
     color: #0254D7;
     border: 1px solid #0254D7;
-    background-image: url(/img/select-down-arrow-color.svg);
+    background-image: url(../img/select-down-arrow-color.svg);
 }
 
 .live-chat-setting-archived-heading span {
@@ -2102,7 +2120,7 @@ div.nav-link {
     border-bottom: 1px solid #E6E6E6;
 }
 
-.live-chat-archived-chats-area table tr:hover {
+.live-chat-archived-chats-area table tbody tr:hover {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     background: #FFFFFF;
 }
