--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ div.nav-link {
     grid-column: 3 / -1;
     font-size: 10px;
     color: var(--color-grey-7E);
-    margin: 0 auto;
+    margin: 1px auto;
     font-size: 10px;
     font-weight: 400;
 }
