--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
-@font-face {
+/* @font-face {
     font-family: 'DM Sans' !important;
-    src: url('../fonts/DMSans-Regular-webfont.ttf');
-}
-
-
-/* {
-    font-family: 'sans-serif' !important;
+    src: url('../fonts/DMSans-Regular-webfont.ttf') format("ttf");
 } */
+
+@font-face {
+    font-family: "Silka";
+    src: url("../fonts/silka-regular-webfont.ttf");
+}
 
 
 /* Live Chat Styling Variables */
@@ -25,6 +25,7 @@
 
 html {
     overflow: hidden;
+    font-family: "Silka";
 }
 
 *,
@@ -32,7 +33,6 @@ html {
 *::after {
     margin: 0px;
     padding: 0px;
-    /* font-family: 'DM Sans' !important; */
 }
 
 p {
@@ -206,7 +206,7 @@ div.nav-link {
     grid-column: 3 / -1;
     font-size: 10px;
     color: var(--color-grey-7E);
-    margin: 2px auto;
+    margin: 0 auto;
     font-size: 10px;
     font-weight: 400;
 }
@@ -330,7 +330,7 @@ div.nav-link {
 
 .live-chat-message-wrapper {
     font-size: 12px;
-    font-weight: 600;
+    font-weight: 500;
     width: 100%;
     height: 70%;
     margin-top: 2px;
@@ -1267,7 +1267,7 @@ div.nav-link {
     border: 1px solid #E6E6E6;
     border-radius: 5px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -1978,7 +1978,7 @@ div.nav-link {
     border: 1px solid #E6E6E6;
     border-radius: 5px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -2029,7 +2029,7 @@ div.nav-link {
     border: 1px solid #E6E6E6;
     border-radius: 5px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -2171,7 +2171,7 @@ div.nav-link {
 
 .live-chat-archived-chats-area p {
     font-size: 13px;
-    margin-top: 60px;
+    margin-top: 56px;
     color: #4D4D4D;
     width: 50%;
     font-weight: 600;
