--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
-/* @font-face {
-    font-family: 'DM Sans' !important;
-    src: url('../fonts/DMSans-Regular-webfont.ttf') format("ttf");
-} */
-
 @font-face {
+    font-family: "DM Sans";
+    src: url('../fonts/DMSans-Regular-webfont.ttf') format("ttf");
+}
+
+
+/* @font-face {
     font-family: "Silka";
     src: url("../fonts/silka-regular-webfont.ttf");
-}
+} */
 
 
 /* Live Chat Styling Variables */
@@ -25,7 +26,8 @@
 
 html {
     overflow: hidden;
-    font-family: "Silka";
+    font-family: 'DM Sans';
+    font-style: normal;
 }
 
 *,
@@ -112,7 +114,7 @@ div.nav-link {
     bottom: 150%;
     left: 50%;
     margin-left: -40px;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 10px;
 }
 
@@ -332,7 +334,7 @@ div.nav-link {
     font-size: 12px;
     font-weight: 500;
     width: 100%;
-    height: 70%;
+    height: 73%;
     margin-top: 2px;
     margin-bottom: 0;
     overflow-x: hidden;
@@ -428,7 +430,7 @@ div.nav-link {
     width: 93%;
     border: 1px solid var(--border-color-primary);
     border-radius: 5px;
-    height: 16%;
+    height: 78px;
     display: grid;
     background-color: white;
     margin: 2px auto;
@@ -438,7 +440,7 @@ div.nav-link {
     grid-row: 1 / 2;
     padding: 14px 10px 10px 10px;
     width: 99%;
-    height: 40px;
+    height: 46px;
     margin-left: 2px;
 }
 
@@ -460,6 +462,7 @@ div.nav-link {
     display: grid;
     grid-template-columns: 70px 100px 1fr;
     justify-items: end;
+    height: 32px;
     border-top: 1px solid var(--border-color-primary);
 }
 
@@ -470,13 +473,13 @@ div.nav-link {
     align-self: start;
     justify-self: start;
     font-weight: 500;
-    padding-top: 10px;
+    padding-top: 6px;
     margin-left: 10px;
 }
 
 .live-chat-reply {
     color: var(--color-primary);
-    padding: 7px 10px 0px 10px;
+    padding: 4px 10px 0px 10px;
     border-top: 2px solid var(--color-primary);
 }
 
@@ -723,7 +726,7 @@ div.nav-link {
 }
 
 .transfer-chat-popup-heading h6 {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 15px;
     color: #2D2D2D;
 }
@@ -753,7 +756,7 @@ div.nav-link {
 .transfer-chat-model .form-popup .form-container label {
     font-size: 12px;
     color: #4D4D4D;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .transfer-chat-model .form-popup .form-container select {
@@ -766,7 +769,7 @@ div.nav-link {
     color: #868686;
     padding: 0px 0px 2px 10px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -820,7 +823,7 @@ div.nav-link {
 }
 
 .resolve-chat-popup-heading h6 {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 15px;
     color: #2D2D2D;
 }
@@ -929,7 +932,7 @@ div.nav-link {
 .live-chat-setting-section .setting-link span {
     padding-left: 5px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     color: #4D4D4D;
 }
@@ -989,12 +992,12 @@ div.nav-link {
 
 .live-chat-setting-profile-heading span {
     padding-left: 5px;
-    font-weight: 600;
+    font-weight: 500;
     color: #4D4D4D;
 }
 
 .live-chat-setting-profile-heading img {
-    margin-top: -7px;
+    margin-top: -5px;
 }
 
 .live-chat-profile-area {
@@ -1043,7 +1046,7 @@ div.nav-link {
 .live-chat-profile-area .second-ele p {
     display: contents;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     line-height: 14px;
     color: #909090;
@@ -1052,7 +1055,7 @@ div.nav-link {
 .live-chat-profile-area .first-ele p {
     display: contents;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     line-height: 14px;
     color: #909090;
@@ -1080,13 +1083,13 @@ div.nav-link {
 .live-chat-profile-area .second-ele b {
     font-size: 12px;
     color: #4D4D4D;
-    opacity: 0.9;
+    font-weight: normal;
 }
 
 .live-chat-profile-area .first-ele h6 {
     margin-top: 16px;
     margin-bottom: 1px;
-    font-weight: 700;
+    font-weight: 500;
     font-size: 15px;
     color: #4D4D4D;
 }
@@ -1288,7 +1291,7 @@ div.nav-link {
 
 .live-chat-setting-calender-heading span {
     padding-left: 5px;
-    font-weight: 600;
+    font-weight: 500;
     color: #4D4D4D;
 }
 
@@ -1359,7 +1362,7 @@ div.nav-link {
 }
 
 .live-chat-calender-area table tr td {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     color: #4D4D4D;
 }
@@ -1377,7 +1380,7 @@ div.nav-link {
     width: 50%;
     display: inline-block;
     margin-left: 20px;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .live-chat-calender-area .pagination-div {
@@ -1511,7 +1514,7 @@ div.nav-link {
 
 .live-chat-setting-canned-response-heading {
     width: 100%;
-    margin: -4px 5px 7px -5px;
+    margin: -2px 5px 7px -5px;
     padding: 12px 30px 15px 30px;
     background: #FFFFFF;
 }
@@ -1531,7 +1534,7 @@ div.nav-link {
 
 .live-chat-setting-canned-response-heading span {
     padding-left: 5px;
-    font-weight: 600;
+    font-weight: 500;
     color: #4D4D4D;
 }
 
@@ -1574,7 +1577,7 @@ div.nav-link {
 }
 
 .canned-response-popup-content h6 {
-    font-weight: 700;
+    font-weight: 500;
     font-size: 12px;
     color: #2D2D2D;
 }
@@ -1604,7 +1607,7 @@ div.nav-link {
 .canned-response-model .form-popup .form-container label {
     font-size: 12px;
     color: #4D4D4D;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .canned-response-model .form-popup .form-container input {
@@ -1730,7 +1733,7 @@ div.nav-link {
 }
 
 .live-chat-canned-response-area table tr td {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     color: #4D4D4D;
 }
@@ -1823,7 +1826,7 @@ div.nav-link {
     margin-top: 56px;
     color: #4D4D4D;
     width: 50%;
-    font-weight: 600;
+    font-weight: 500;
     display: inline-block;
     margin-left: 20px;
 }
@@ -2008,8 +2011,8 @@ div.nav-link {
 }
 
 .live-chat-setting-archived-heading {
-    width: 100%;
-    margin: -4px 5px 7px 1px;
+    width: 99%;
+    margin: 3px 0px 12px 7px;
     padding: 12px 30px 15px 30px;
     background: #FFFFFF;
 }
@@ -2103,9 +2106,9 @@ div.nav-link {
 
 .live-chat-archived-chats-area {
     z-index: 0;
-    width: 100%;
+    width: 99%;
     background: #ffffff;
-    margin: 1px 5px 5px 1px;
+    margin: 1px 5px 5px 7px;
     overflow: hidden;
     padding: 0px;
 }
@@ -2134,7 +2137,7 @@ div.nav-link {
 }
 
 .live-chat-archived-chats-area table tr td {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 12px;
     color: #4D4D4D;
     padding-left: 50px;
@@ -2174,7 +2177,7 @@ div.nav-link {
     margin-top: 56px;
     color: #4D4D4D;
     width: 50%;
-    font-weight: 600;
+    font-weight: 500;
     padding-left: 10px;
     display: inline-block;
 }
