--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,30 @@ div.nav-link {
     background: rgba(2, 84, 215, 0.08);
 }
 
+@media (min-width: 768px) {
+    .sidebar.toggled .nav-item .nav-link {
+        text-align: center;
+        width: 2.5rem;
+        margin-left: 27px;
+        height: 36px;
+        margin-bottom: 6px;
+        margin-top: 6px;
+        padding: 6px 10px 10px 10px;
+    }
+    /* .nav-item .active-collapse {
+        background: rgba(2, 84, 215, 0.08);
+        border-radius: 5px;
+    } */
+    /* .sidebar.toggled .nav-item .nav-link:hover {
+        background: #F4F4F4;
+        border-radius: 5px;
+    }
+    .nav-item .active-collapse:hover {
+        background: rgba(2, 84, 215, 0.08) !important;
+        border-radius: 5px;
+    } */
+}
+
 .live-chat-active-customers {
     border-right: solid#F8F9FC 2px;
     background: #fff;
@@ -930,6 +954,103 @@ div.nav-link {
 /*************** Resolve Chat Model CSS End *********/
 
 
+/*************** Agent Offline  Model CSS Start *********/
+
+.agent-offline-status-popup-heading {
+    width: 100%;
+    border-bottom: 1px solid #E6E6E6;
+    margin-bottom: 12px;
+}
+
+.agent-offline-status-popup-heading h6 {
+    font-weight: 500;
+    font-size: 15px;
+    color: #2D2D2D;
+}
+
+.agent-offline-status-model {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.08);
+}
+
+.agent-offline-status-model .form-popup {
+    position: absolute;
+    top: 15%;
+    left: 42%;
+    right: 27%;
+    max-width: 535px;
+    height: 252px;
+    padding: 12px 20px 20px 20px;
+    border-radius: 8px;
+    background-color: white;
+}
+
+.agent-offline-status-model .form-popup .form-container label {
+    font-size: 12px;
+    color: #4D4D4D;
+    font-weight: 500;
+}
+
+.agent-offline-status-model .form-popup .form-container select {
+    width: 100%;
+    height: 36px;
+    background: #FFFFFF;
+    border: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    border-radius: 5px;
+    color: #868686;
+    padding: 0px 0px 2px 10px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: transparent;
+    appearance: none;
+    background-image: url(../img/select-down-arrow.svg);
+    background-repeat: no-repeat;
+    background-position-x: 95%;
+    background-position-y: 13px;
+    outline: none;
+    margin-top: 5px;
+}
+
+.agent-offline-status-model .form-popup .form-container .cancelBtn {
+    border: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background: none;
+    font-weight: 500;
+    font-size: 12px;
+    color: #4D4D4D;
+    outline: none;
+    height: 37px;
+    width: 102px;
+}
+
+.agent-offline-status-model .form-popup .form-container .submitBtn {
+    background: linear-gradient(270deg, #156FFF 0%, #0254D7 100%);
+    border-radius: 5px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    border: none;
+    outline: none;
+    height: 37px;
+    width: 102px;
+    margin-left: 18px;
+    color: #FFFFFF;
+}
+
+
+/*************** Agent Offline Model CSS End *********/
+
+
 /*     Setting Page css start*/
 
 #live-chat-setting-content-c {
@@ -1049,6 +1170,7 @@ div.nav-link {
     margin: 1px 5px 5px -5px;
     overflow: hidden;
     padding-right: 80px;
+    padding-bottom: 80px;
 }
 
 .live-chat-profile-area .first-ele {
@@ -1077,8 +1199,26 @@ div.nav-link {
     margin-left: 30px;
 }
 
+.live-chat-profile-area .second-ele .saveChangesBtn {
+    right: 1.5%;
+    bottom: -50px;
+    position: absolute;
+    width: 135px;
+    height: 41px;
+    background: linear-gradient(90deg, #0254D7 0%, #0062FF 100%);
+    border-radius: 5px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    color: #FFFFFF;
+}
+
 .live-chat-profile-area .second-ele {
     margin-top: 50px;
+    position: relative;
 }
 
 .live-chat-profile-area .second-ele .content-left {
@@ -2784,9 +2924,9 @@ div.nav-link {
     #sidebarlink {
         padding-left: 13px;
     }
-    a.nav-link {
+    /* a.nav-link {
         margin-left: 40px;
-    }
+    } */
     div.nav-link {
         margin-left: 27px;
     }
@@ -2918,9 +3058,8 @@ div.nav-link {
 
 .export-chat-model .form-popup {
     position: absolute;
-    top: 15%;
-    left: 42%;
-    right: 27%;
+    top: 11%;
+    left: 28%;
     max-width: 535px;
     height: 252px;
     padding: 12px 20px 20px 20px;
@@ -3010,9 +3149,8 @@ div.nav-link {
 
 .filter-chat-model .form-popup {
     position: absolute;
-    top: 15%;
-    left: 42%;
-    right: 27%;
+    top: 5%;
+    left: 28%;
     max-width: 405px;
     height: 475px;
     padding: 11px 12px 20px 12px;
