--- a/css/style.css
+++ b/css/style.css
@@ -1195,6 +1195,7 @@ div.nav-link {
 .live-chat-profile-area .second-ele .profile-width {
     max-width: 100%;
     margin-left: 30px;
+    margin-bottom: 25px;
 }
 
 .live-chat-profile-area .second-ele .saveChangesBtn {
@@ -1219,9 +1220,10 @@ div.nav-link {
     position: relative;
 }
 
-.live-chat-profile-area .second-ele .content-left {
+
+/* .live-chat-profile-area .second-ele .content-left {
     padding-left: 25px;
-}
+} */
 
 .live-chat-profile-area .second-ele p {
     display: contents;
