--- a/css/style.css
+++ b/css/style.css
@@ -4665,6 +4665,7 @@ div.nav-link {
     font-weight: 500;
     font-size: 12px;
     color: #4D4D4D;
+    margin-left: 18px;
 }
 
 .modal-body input::placeholder {
