--- a/feedback-form-ui/style.css
+++ b/feedback-form-ui/style.css
@@ -35,8 +35,17 @@ p {
 
 .chatbot-feedback-div .feedback-emoji-div {
     width: 100%;
+    clear: both;
     display: flex;
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
     justify-content: space-around;
+    -webkit-justify-content: space-around;
     margin-top: 5px;
     margin-bottom: 5px;
     height: 62px;
@@ -46,6 +55,7 @@ p {
     width: 52px;
     height: 52px;
     transition: width .6s, height .6s;
+    cursor: pointer;
 }
 
 .feedback-slider-div {
